@@ -10,7 +10,9 @@ PluggableAuthService changelog
 
       - All authenticateCredentials() returned a single None when they
         could not authenticate, although all calls expected a tuple.
-        
+
+      - challenge() did not get called, even when no user could be validated.
+              
   Version 1.0.2 (2004/07/15)
 
     Bugs Fixed
